# Automobile_Sales_Information_Management_System

./: .gitignore  CMakeLists.txt  README.md  Windows环境配置指南.md  compile_commands.json  generate_report.py  课程设计报告.docx  课程设计报告.md  课设模板.docx
.cache/clangd/index/: car.c.202D2BC0134B7F8B.idx  car.h.7FC26C95BB2C88CB.idx  customer.c.EEAC3C0BC148CBF5.idx  customer.h.B211F2E7553D03B9.idx  data_io.c.227BFEF0B9B3EC51.idx  data_io.h.7DA623EBC0013F84.idx  employee.c.CEA56842A7A42DE4.idx  employee.h.10DBEA58159614FB.idx  main.c.46E5582B6550D07E.idx  menu.c.5BCF6CCF04DF4AB6.idx  menu.h.CF36010F9963D6AE.idx  sale.c.3F72D304FFD2C9C4.idx  sale.h.B2C814A9CCC02EC1.idx  utils.c.9897533B1ACF5DFC.idx  utils.h.0791F59AD9F4C11D.idx
include/: car.h  customer.h  data_io.h  employee.h  sale.h  utils.h
src/: car.c  customer.c  data_io.c  employee.c  main.c  menu.c  sale.c  utils.c
